Bug 1720922 - Update sphinx 4.1.1 and its dependencies r=firefox-build-system-reviewers,mhentges
Depends on D120087

Differential Revision: https://phabricator.services.mozilla.com/D120088

UltraBlame original commit: aacc9e04a101f9faa21604d3c3798ebb9b39ebb2

--- a/tools/moztreedocs/requirements.txt
+++ b/tools/moztreedocs/requirements.txt
@@ -8,6 +8,11 @@ by
 pip
 -
 compile
+with
+python
+3
+.
+9
 #
 To
 update
@@ -400,6 +405,12 @@ js
 sphinx
 -
 panels
+#
+sphinx
+-
+rtd
+-
+theme
 fluent
 .
 pygments
@@ -540,7 +551,7 @@ importlib
 metadata
 =
 =
-2
+3
 .
 0
 .
@@ -552,7 +563,7 @@ hash
 =
 sha256
 :
-77a540690e24b0305878c37ffd421785a6f7e53c8b5720d211b211de8d0e95da
+d582eb5c35b2f16c78e365e0f89e369f36af38fdaad0146208aa973c693ba247
 \
 -
 -
@@ -560,19 +571,14 @@ hash
 =
 sha256
 :
-cefa1a2f919b866c5beb7c9f7b0ebb4061f30a8a9bf16d609b000e2dfaceb9c3
+fc3b3f9697703d3833d2803162d60cbe8b9f57b5da5e6496ac81e3cb82bd8d9c
 #
 via
-#
 -
 r
 requirements
 .
 in
-#
-jsonschema
-#
-markdown
 importlib
 -
 resources
@@ -601,9 +607,11 @@ sha256
 d028f66b66c0d5732dae86ba4276999855e162a749c92620a38c1d779ed138a7
 #
 via
-sphinx
 -
-panels
+r
+requirements
+.
+in
 jinja2
 =
 =
@@ -1144,39 +1152,6 @@ sphinx
 -
 js
 pyasn1
--
-modules
-=
-=
-0
-.
-2
-.
-8
-\
--
--
-hash
-=
-sha256
-:
-905f84c712230b2c592c19470d3ca8d552de726050d1d1716282a1f6146be65e
-\
--
--
-hash
-=
-sha256
-:
-a50b808ffeb97cb3601dd25981f6b016cbb3d31fbf57a8b8a87428e6158d0c74
-#
-via
--
-r
-requirements
-.
-in
-pyasn1
 =
 =
 0
@@ -1214,6 +1189,39 @@ pyasn1
 modules
 #
 rsa
+pyasn1
+-
+modules
+=
+=
+0
+.
+2
+.
+8
+\
+-
+-
+hash
+=
+sha256
+:
+905f84c712230b2c592c19470d3ca8d552de726050d1d1716282a1f6146be65e
+\
+-
+-
+hash
+=
+sha256
+:
+a50b808ffeb97cb3601dd25981f6b016cbb3d31fbf57a8b8a87428e6158d0c74
+#
+via
+-
+r
+requirements
+.
+in
 pygments
 =
 =
@@ -1931,6 +1939,58 @@ in
 #
 sphinx
 sphinx
+=
+=
+4
+.
+1
+.
+1
+\
+-
+-
+hash
+=
+sha256
+:
+23c846a1841af998cb736218539bb86d16f5eb95f5760b1966abcd2d584e62b8
+\
+-
+-
+hash
+=
+sha256
+:
+3d513088236eef51e5b0adb78b0492eb22cc3b8ccdb0b36dd021173b365d4454
+#
+via
+#
+-
+r
+requirements
+.
+in
+#
+recommonmark
+#
+sphinx
+-
+copybutton
+#
+sphinx
+-
+js
+#
+sphinx
+-
+panels
+#
+sphinx
+-
+rtd
+-
+theme
+sphinx
 -
 copybutton
 =
@@ -2038,9 +2098,9 @@ panels
 =
 0
 .
-5
+6
 .
-2
+0
 \
 -
 -
@@ -2048,7 +2108,7 @@ hash
 =
 sha256
 :
-2b2e18448b0494e7a232d6c7dfb9aa3982e7aeb92aeea7d1b146e34e9261d2f1
+bd64afaf85c07f8096d21c8247fc6fd757e339d1be97832c8832d6ae5ed2e61d
 \
 -
 -
@@ -2056,7 +2116,7 @@ hash
 =
 sha256
 :
-b7b3faa05f37b7318fd14cd85c4effa1ab905dfc8bed236a63978565ea461ae4
+d36dcd26358117e11888f7143db4ac2301ebe90873ac00627bf1fe526bf0f058
 #
 via
 -
@@ -2075,7 +2135,7 @@ theme
 .
 5
 .
-1
+2
 \
 -
 -
@@ -2083,7 +2143,7 @@ hash
 =
 sha256
 :
-eda689eda0c7301a80cf122dad28b1861e5605cbf455558f3775e1e8200e83a5
+32bd3b5d13dc8186d7a42fc816a23d32e83a4827d7d9882948e7b837c232da5a
 \
 -
 -
@@ -2091,7 +2151,7 @@ hash
 =
 sha256
 :
-fa6bebd5ab9a73da8e102509a86f3fcc36dec04a0b52ea80e5a033b2aba00113
+4a05bdbe8b1446d77a01e20a23ebc6777c74f43237035e76be89699308987d6f
 #
 via
 -
@@ -2099,58 +2159,6 @@ r
 requirements
 .
 in
-sphinx
-=
-=
-3
-.
-5
-.
-1
-\
--
--
-hash
-=
-sha256
-:
-11d521e787d9372c289472513d807277caafb1684b33eb4f08f7574c405893a9
-\
--
--
-hash
-=
-sha256
-:
-e90161222e4d80ce5fc811ace7c6787a226b4f5951545f7f42acf97277bfc35c
-#
-via
-#
--
-r
-requirements
-.
-in
-#
-recommonmark
-#
-sphinx
--
-copybutton
-#
-sphinx
--
-js
-#
-sphinx
--
-panels
-#
-sphinx
--
-rtd
--
-theme
 sphinxcontrib
 -
 applehelp
@@ -2228,11 +2236,11 @@ sphinxcontrib
 htmlhelp
 =
 =
-1
+2
 .
 0
 .
-3
+0
 \
 -
 -
@@ -2240,7 +2248,7 @@ hash
 =
 sha256
 :
-3c0bc24a2c41e340ac37c85ced6dafc879ab485c095b1d65d2461ac2f7cca86f
+d412243dfb797ae3ec2b59eca0e52dac12e75a241bf0e4eb861e450d06c6ed07
 \
 -
 -
@@ -2248,7 +2256,7 @@ hash
 =
 sha256
 :
-e8f5bb7e31b2dbb25b9cc435c8ab7a79787ebf7f906155729338f3156d93659b
+f5f8bb2d0d629f398bf47d0d69c07bc13b65f75a81ad9e2f71a63d4b7a2f6db2
 #
 via
 #
@@ -2302,9 +2310,7 @@ mermaid
 =
 0
 .
-6
-.
-3
+7
 \
 -
 -
@@ -2312,15 +2318,7 @@ hash
 =
 sha256
 :
-1f113f74231eeca492ef4e370ed2787a371f8aaedacbb2e25430da89016327e6
-\
--
--
-hash
-=
-sha256
-:
-78b892d066802b32961e151fefebc6d042cee463ce1b18c832b209a0d479c115
+d600f5911bbc39491bc4fd611492386f151ed812eb054718aa1a4de4efd02d55
 #
 via
 -
@@ -2373,7 +2371,7 @@ serializinghtml
 .
 1
 .
-4
+5
 \
 -
 -
@@ -2381,7 +2379,7 @@ hash
 =
 sha256
 :
-eaa0eccc86e982a9b939b2b82d12cc5d013385ba5eadcc7e4fed23f4405f77bc
+352a9a00ae864471d3a7ead8d7d79f5fc0b57e8b3f95e9867eb9eb28999b92fd
 \
 -
 -
@@ -2389,7 +2387,7 @@ hash
 =
 sha256
 :
-f242a81d423f59617a8e5cf16f5d4d74e28ee9a66f9e5b637a18082991db5a9a
+aa5f6de5dfdf809ef505c4895e51ef5c9eac17d0f287933eb49ec495280b6952
 #
 via
 #
@@ -2566,10 +2564,6 @@ in
 importlib
 -
 metadata
-#
-importlib
--
-resources
 #
 WARNING
 :
