--- a/tools/moztreedocs/requirements.in
+++ b/tools/moztreedocs/requirements.in
@@ -120,7 +120,17 @@ importlib
 metadata
 =
 =
-2
+3
+.
+0
+.
+0
+importlib
+-
+resources
+=
+=
+3
 .
 0
 .
@@ -348,9 +358,9 @@ snowballstemmer
 Sphinx
 =
 =
-3
+4
 .
-5
+1
 .
 1
 sphinx
@@ -392,9 +402,9 @@ panels
 =
 0
 .
-5
+6
 .
-2
+0
 sphinx
 -
 rtd
@@ -406,7 +416,7 @@ theme
 .
 5
 .
-1
+2
 sphinxcontrib
 -
 applehelp
@@ -432,11 +442,11 @@ sphinxcontrib
 htmlhelp
 =
 =
-1
+2
 .
 0
 .
-3
+0
 sphinxcontrib
 -
 jsmath
@@ -454,9 +464,7 @@ mermaid
 =
 0
 .
-6
-.
-3
+7
 sphinxcontrib
 -
 qthelp
@@ -476,7 +484,7 @@ serializinghtml
 .
 1
 .
-4
+5
 tornado
 =
 =
