Bug 1718996 [wpt PR 29570] - Add negative radius test for roundrect, a=testonly
Automatic update from web-platform-tests
Add negative radius test for roundrect

According to the spec with throw an error for negative radii, like with
arcTo().

Bug: 1193694
Change-Id: Ia503af7f9d27647466114912ddff287ae982be49
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3002632
Reviewed-by: Yi Xu <yiyixchromium.org>
Reviewed-by: Justin Novosad <junovchromium.org>
Reviewed-by: Aaron Krajeski <aaronhkchromium.org>
Commit-Queue: Aaron Krajeski <aaronhkchromium.org>
Cr-Commit-Position: refs/heads/master{#898715}

--

wpt-commits: b126c12ec26c7fa4cb4b6b6836e45978083d58cd
wpt-pr: 29570

UltraBlame original commit: 3f2b6c974dd35931646a377c12cdab4f78be2c20

--- a/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/path-objects.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/path-objects.yaml
@@ -18544,6 +18544,73 @@ name
 .
 path
 .
+roundrect
+.
+radius
+.
+negative
+desc
+:
+roundRect
+(
+)
+with
+negative
+radius
+throws
+an
+exception
+code
+:
+|
+assert
+throws
+INDEX_SIZE_ERR
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+-
+1
+]
+)
+;
+assert
+throws
+INDEX_SIZE_ERR
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+1
+-
+1
+]
+)
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
 fill
 .
 overlap
