--- a/testing/web-platform/tests/html/canvas/tools/yaml/element/path-objects.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/element/path-objects.yaml
@@ -18102,6 +18102,73 @@ name
 .
 path
 .
+roundrect
+.
+radius
+.
+negative
+desc
+:
+roundRect
+(
+)
+with
+negative
+radius
+throws
+an
+exception
+code
+:
+|
+assert
+throws
+INDEX_SIZE_ERR
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+-
+1
+]
+)
+;
+assert
+throws
+INDEX_SIZE_ERR
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+1
+-
+1
+]
+)
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
 ellipse
 .
 basics
