--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -2324,6 +2324,49 @@ em
 -
 x86_64
 -
+lite
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+x86_64
+-
+lite
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+x86_64
+-
+tests
+-
+web
+-
+platform
+-
+tests
+-
+backlog
+android
+-
+em
+-
+7
+.
+0
+-
+x86_64
+-
 shippable
 /
 opt
@@ -2366,6 +2409,53 @@ em
 0
 -
 x86_64
+-
+shippable
+-
+lite
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+x86_64
+-
+shippable
+-
+lite
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+x86_64
+-
+tests
+-
+web
+-
+platform
+-
+tests
+-
+backlog
+android
+-
+em
+-
+7
+.
+0
+-
+x86_64
 /
 debug
 :
@@ -2376,6 +2466,41 @@ platform
 android
 -
 x86_64
+/
+debug
+test
+-
+sets
+:
+-
+android
+-
+x86_64
+-
+tests
+android
+-
+em
+-
+7
+.
+0
+-
+x86_64
+-
+lite
+/
+debug
+:
+build
+-
+platform
+:
+android
+-
+x86_64
+-
+lite
 /
 debug
 test
