Bug 1717914 - wasm: Add feature flags for Memory64. r=lth
Differential Revision: https://phabricator.services.mozilla.com/D118644

UltraBlame original commit: 8adef72c833a264a72182d911d5d8f39f018e164

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -37109,6 +37109,37 @@ always
 #
 endif
 #
+if
+defined
+(
+ENABLE_WASM_MEMORY64
+)
+-
+name
+:
+javascript
+.
+options
+.
+wasm_memory64
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
+endif
+/
+/
+defined
+(
+ENABLE_WASM_MEMORY64
+)
+#
 Support
 for
 ArrayBuffers
