Bug 1717914 - wasm: Add IndexType, decode, validate, and construct. r=lth
This commit repurposes MemoryKind as IndexType, making it
a part of Limits. DecodeLimits and GetLimits are updated
to decode/convert the index type.

The index type for a memory object is stored inside the
WasmArrayRawBuffer or SharedArrayRawBuffer for the memory.
This is not optimal, but is required so that structured
clone of a wasm shared memory retains the index type.

Linking is updated to require that the imported memory
object has the same index type as specified memory.

No validation conditions on the min/max of a memory are
changed yet. i64 memories still retain the 32-bit
restrictions on memory size/reservations.

Differential Revision: https://phabricator.services.mozilla.com/D118645

UltraBlame original commit: 0a3247a9427e14c3d8ced9d47129561287df646f

--- a/js/src/jit-test/etc/wasm/generate-spectests/config.toml
+++ b/js/src/jit-test/etc/wasm/generate-spectests/config.toml
@@ -159,6 +159,23 @@ data
 wast
 "
 #
+memory
+limits
+can
+be
+encoded
+with
+more
+bytes
+now
+"
+binary
+-
+leb128
+.
+wast
+"
+#
 testing
 that
 multiple
