Bug 1718089 [wpt PR 29480] - Update wpt metadata, a=testonly
wpt-pr: 29480
wpt-type: metadata

UltraBlame original commit: 9d8151e6eb89e0a4f9d454e205d2a9759a1e93bc

--- a/testing/web-platform/meta/sanitizer-api/sanitizer-sanitize.https.tentative.html.ini
+++ b/testing/web-platform/meta/sanitizer-api/sanitizer-sanitize.https.tentative.html.ini
@@ -9,6 +9,11 @@ tentative
 .
 html
 ]
+max
+-
+asserts
+:
+53
 [
 SanitizerAPI
 with
@@ -1727,6 +1732,21 @@ list
 with
 id
 attribute
+]
+expected
+:
+FAIL
+[
+SanitizerAPI
+sanitize
+function
+shouldn
+'
+t
+load
+the
+image
+.
 ]
 expected
 :
