--- a/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/path-objects.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/path-objects.yaml
@@ -14765,6 +14765,203 @@ roundrect
 .
 radii
 .
+1
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+four
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+first
+radius
+specified
+as
+a
+DOMPointInit
+applies
+to
+the
+top
+-
+left
+corner
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+{
+x
+:
+40
+y
+:
+20
+}
+0
+0
+0
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+top
+-
+left
+corner
+assert
+pixel
+20
+1
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+41
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+10
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+1
+21
+=
+=
+0
+255
+0
+255
+;
+/
+/
+other
+corners
+assert
+pixel
+98
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+48
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
+4
+.
+radii
+.
 2
 .
 double
@@ -14981,6 +15178,203 @@ DOMPoint
 40
 20
 )
+0
+0
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+top
+-
+right
+corner
+assert
+pixel
+79
+1
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+58
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+10
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+98
+21
+=
+=
+0
+255
+0
+255
+;
+/
+/
+other
+corners
+assert
+pixel
+1
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+48
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
+4
+.
+radii
+.
+2
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+four
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+second
+radius
+specified
+as
+a
+DOMPointInit
+applies
+to
+the
+top
+-
+right
+corner
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+0
+{
+x
+:
+40
+y
+:
+20
+}
 0
 0
 ]
@@ -15324,6 +15718,203 @@ DOMPoint
 40
 20
 )
+0
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+bottom
+-
+right
+corner
+assert
+pixel
+79
+48
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+58
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+39
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+98
+28
+=
+=
+0
+255
+0
+255
+;
+/
+/
+other
+corners
+assert
+pixel
+1
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+48
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
+4
+.
+radii
+.
+3
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+four
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+third
+radius
+specified
+as
+a
+DOMPointInit
+applies
+to
+the
+bottom
+-
+right
+corner
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+0
+0
+{
+x
+:
+40
+y
+:
+20
+}
 0
 ]
 )
@@ -15787,6 +16378,203 @@ path
 .
 roundrect
 .
+4
+.
+radii
+.
+4
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+four
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+fourth
+radius
+specified
+as
+a
+DOMPointInit
+applies
+to
+the
+bottom
+-
+left
+corner
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+0
+0
+0
+{
+x
+:
+40
+y
+:
+20
+}
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+bottom
+-
+left
+corner
+assert
+pixel
+20
+48
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+41
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+39
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+1
+28
+=
+=
+0
+255
+0
+255
+;
+/
+/
+other
+corners
+assert
+pixel
+1
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+48
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
 3
 .
 radii
@@ -16005,6 +16793,202 @@ DOMPoint
 40
 20
 )
+0
+0
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+top
+-
+left
+corner
+assert
+pixel
+20
+1
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+41
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+10
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+1
+21
+=
+=
+0
+255
+0
+255
+;
+/
+/
+other
+corners
+assert
+pixel
+98
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+48
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
+3
+.
+radii
+.
+1
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+three
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+first
+radius
+specified
+as
+a
+DOMPointInit
+applies
+to
+the
+top
+-
+left
+corner
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+{
+x
+:
+40
+y
+:
+20
+}
 0
 0
 ]
@@ -16354,6 +17338,245 @@ DOMPoint
 40
 20
 )
+0
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+top
+-
+right
+corner
+assert
+pixel
+79
+1
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+58
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+10
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+98
+21
+=
+=
+0
+255
+0
+255
+;
+/
+/
+bottom
+-
+left
+corner
+assert
+pixel
+20
+48
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+41
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+39
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+1
+28
+=
+=
+0
+255
+0
+255
+;
+/
+/
+other
+corners
+assert
+pixel
+1
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+48
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
+3
+.
+radii
+.
+2
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+three
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+second
+radius
+specified
+as
+a
+DOMPoint
+applies
+to
+the
+top
+-
+right
+and
+bottomInit
+-
+left
+corners
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+0
+{
+x
+:
+40
+y
+:
+20
+}
 0
 ]
 )
@@ -16854,6 +18077,202 @@ path
 .
 roundrect
 .
+3
+.
+radii
+.
+3
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+three
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+third
+radius
+specified
+as
+a
+DOMPointInit
+applies
+to
+the
+bottom
+-
+right
+corner
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+0
+0
+{
+x
+:
+40
+y
+:
+20
+}
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+bottom
+-
+right
+corner
+assert
+pixel
+79
+48
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+58
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+39
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+98
+28
+=
+=
+0
+255
+0
+255
+;
+/
+/
+other
+corners
+assert
+pixel
+1
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+48
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
 2
 .
 radii
@@ -17243,6 +18662,244 @@ roundrect
 .
 radii
 .
+1
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+two
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+first
+radius
+specified
+as
+a
+DOMPoint
+applies
+to
+the
+top
+-
+left
+and
+bottomInit
+-
+right
+corners
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+{
+x
+:
+40
+y
+:
+20
+}
+0
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+top
+-
+left
+corner
+assert
+pixel
+20
+1
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+41
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+10
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+1
+21
+=
+=
+0
+255
+0
+255
+;
+/
+/
+bottom
+-
+right
+corner
+assert
+pixel
+79
+48
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+58
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+39
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+98
+28
+=
+=
+0
+255
+0
+255
+;
+/
+/
+other
+corners
+assert
+pixel
+98
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+48
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
+2
+.
+radii
+.
 2
 .
 double
@@ -17465,6 +19122,244 @@ DOMPoint
 40
 20
 )
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+top
+-
+right
+corner
+assert
+pixel
+79
+1
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+58
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+10
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+98
+21
+=
+=
+0
+255
+0
+255
+;
+/
+/
+bottom
+-
+left
+corner
+assert
+pixel
+20
+48
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+41
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+39
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+1
+28
+=
+=
+0
+255
+0
+255
+;
+/
+/
+other
+corners
+assert
+pixel
+1
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+48
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
+2
+.
+radii
+.
+2
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+two
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+second
+radius
+specified
+as
+a
+DOMPoint
+applies
+to
+the
+top
+-
+right
+and
+bottomInit
+-
+left
+corners
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+0
+{
+x
+:
+40
+y
+:
+20
+}
 ]
 )
 ;
@@ -17835,6 +19730,315 @@ DOMPoint
 40
 20
 )
+]
+)
+;
+ctx
+.
+fillStyle
+=
+'
+#
+0f0
+'
+;
+ctx
+.
+fill
+(
+)
+;
+/
+/
+top
+-
+left
+corner
+assert
+pixel
+20
+1
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+41
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+10
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+1
+21
+=
+=
+0
+255
+0
+255
+;
+/
+/
+top
+-
+right
+corner
+assert
+pixel
+79
+1
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+58
+1
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+10
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+98
+21
+=
+=
+0
+255
+0
+255
+;
+/
+/
+bottom
+-
+right
+corner
+assert
+pixel
+79
+48
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+58
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+98
+39
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+98
+28
+=
+=
+0
+255
+0
+255
+;
+/
+/
+bottom
+-
+left
+corner
+assert
+pixel
+20
+48
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+41
+48
+=
+=
+0
+255
+0
+255
+;
+assert
+pixel
+1
+39
+=
+=
+255
+0
+0
+255
+;
+assert
+pixel
+1
+28
+=
+=
+0
+255
+0
+255
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+path
+.
+roundrect
+.
+1
+.
+radius
+.
+dompointinit
+desc
+:
+Verify
+that
+when
+two
+radii
+are
+given
+to
+roundRect
+(
+)
+the
+first
+radius
+specified
+as
+a
+DOMPoint
+applies
+to
+the
+top
+-
+left
+and
+bottomInit
+-
+left
+corners
+.
+code
+:
+|
+ctx
+.
+fillStyle
+=
+'
+#
+f00
+'
+;
+ctx
+.
+fillRect
+(
+0
+0
+100
+50
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+50
+[
+{
+x
+:
+40
+y
+:
+20
+}
 ]
 )
 ;
