Bug 1719737 [wpt PR 29614] - Use RangeError for CanvasRenderingContext2D.roundRect, a=testonly
Automatic update from web-platform-tests
Use RangeError for CanvasRenderingContext2D.roundRect

Bug: 1193694
Change-Id: Id17730a9ac6b088816221ded46648de4185fca14
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3015806
Reviewed-by: Justin Novosad <junovchromium.org>
Reviewed-by: Domenic Denicola <domenicchromium.org>
Reviewed-by: Aaron Krajeski <aaronhkchromium.org>
Commit-Queue: Aaron Krajeski <aaronhkchromium.org>
Cr-Commit-Position: refs/heads/master{#899819}

--

wpt-commits: 7e84c9df47d55601226081cce9f003355546a305
wpt-pr: 29614

UltraBlame original commit: 6b5d4b0e570f22daa995f7337e5651ea7d5ed32c

--- a/testing/web-platform/tests/html/canvas/tools/yaml/element/path-objects.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/element/path-objects.yaml
@@ -20162,7 +20162,7 @@ that
 roundRect
 throws
 an
-IndexSizeError
+RangeError
 if
 radii
 is
@@ -20173,9 +20173,14 @@ array
 code
 :
 |
-assert
-throws
-INDEX_SIZE_ERR
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
 ctx
 .
 roundRect
@@ -20186,6 +20191,8 @@ roundRect
 50
 [
 ]
+)
+}
 )
 ;
 -
@@ -20219,9 +20226,14 @@ items
 code
 :
 |
-assert
-throws
-INDEX_SIZE_ERR
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
 ctx
 .
 roundRect
@@ -20237,6 +20249,8 @@ roundRect
 0
 0
 ]
+)
+}
 )
 ;
 -
@@ -20265,9 +20279,14 @@ exception
 code
 :
 |
-assert
-throws
-INDEX_SIZE_ERR
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
 ctx
 .
 roundRect
@@ -20281,10 +20300,17 @@ roundRect
 1
 ]
 )
+}
+)
 ;
-assert
-throws
-INDEX_SIZE_ERR
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
 ctx
 .
 roundRect
@@ -20299,11 +20325,7 @@ roundRect
 1
 ]
 )
-;
-t
-.
-done
-(
+}
 )
 ;
 -
