--- a/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/path-objects.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/path-objects.yaml
@@ -20652,7 +20652,7 @@ that
 roundRect
 throws
 an
-IndexSizeError
+RangeError
 if
 radii
 is
@@ -20663,9 +20663,14 @@ array
 code
 :
 |
-assert
-throws
-INDEX_SIZE_ERR
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
 ctx
 .
 roundRect
@@ -20676,6 +20681,8 @@ roundRect
 50
 [
 ]
+)
+}
 )
 ;
 t
@@ -20715,9 +20722,14 @@ items
 code
 :
 |
-assert
-throws
-INDEX_SIZE_ERR
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
 ctx
 .
 roundRect
@@ -20733,6 +20745,8 @@ roundRect
 0
 0
 ]
+)
+}
 )
 ;
 t
@@ -20767,9 +20781,14 @@ exception
 code
 :
 |
-assert
-throws
-INDEX_SIZE_ERR
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
 ctx
 .
 roundRect
@@ -20783,10 +20802,17 @@ roundRect
 1
 ]
 )
+}
+)
 ;
-assert
-throws
-INDEX_SIZE_ERR
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
 ctx
 .
 roundRect
@@ -20800,6 +20826,8 @@ roundRect
 -
 1
 ]
+)
+}
 )
 ;
 t
