Bug 1719737 [wpt PR 29614] - Update wpt metadata, a=testonly
wpt-pr: 29614
wpt-type: metadata

UltraBlame original commit: db4e3bd46846ef79282e8e6bbe8785ba6947eff0

--- a/testing/web-platform/meta/html/canvas/element/path-objects/2d.path.roundrect.radius.none.html.ini
+++ b/testing/web-platform/meta/html/canvas/element/path-objects/2d.path.roundrect.radius.none.html.ini
@@ -29,3 +29,21 @@ array
 expected
 :
 FAIL
+[
+Check
+that
+roundRect
+throws
+an
+RangeError
+if
+radii
+is
+an
+empty
+array
+.
+]
+expected
+:
+FAIL
