--- a/testing/web-platform/meta/html/canvas/offscreen/path-objects/2d.path.roundrect.radius.none.html.ini
+++ b/testing/web-platform/meta/html/canvas/offscreen/path-objects/2d.path.roundrect.radius.none.html.ini
@@ -29,3 +29,21 @@ array
 expected
 :
 FAIL
+[
+Check
+that
+roundRect
+throws
+an
+RangeError
+if
+radii
+is
+an
+empty
+array
+.
+]
+expected
+:
+FAIL
