Bug 1719139 [wpt PR 29575] - Update wpt metadata, a=testonly
wpt-pr: 29575
wpt-type: metadata

UltraBlame original commit: bb8654e35c2cb6b069df5119d936765832f9a6ed

--- a/testing/web-platform/meta/html/cross-origin-embedder-policy/reporting-subresource-corp.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-embedder-policy/reporting-subresource-corp.https.html.ini
@@ -15,6 +15,7 @@ if
 release_or_beta
 :
 ERROR
+TIMEOUT
 [
 [
 document
@@ -61,7 +62,7 @@ COEP
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 [
 document
@@ -73,7 +74,7 @@ redirect
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 [
 dedicated
@@ -90,6 +91,7 @@ if
 release_or_beta
 :
 FAIL
+NOTRUN
 [
 [
 dedicated
@@ -110,6 +112,7 @@ if
 release_or_beta
 :
 FAIL
+NOTRUN
 [
 [
 dedicated
@@ -123,7 +126,7 @@ COEP
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 [
 dedicated
@@ -136,7 +139,7 @@ redirect
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 [
 shared
@@ -153,6 +156,7 @@ if
 release_or_beta
 :
 FAIL
+NOTRUN
 [
 [
 shared
@@ -173,6 +177,7 @@ if
 release_or_beta
 :
 FAIL
+NOTRUN
 [
 [
 shared
@@ -186,7 +191,7 @@ COEP
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 [
 shared
@@ -199,7 +204,7 @@ redirect
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 [
 service
@@ -216,6 +221,7 @@ if
 release_or_beta
 :
 TIMEOUT
+NOTRUN
 [
 [
 service
@@ -232,9 +238,6 @@ origin
 ]
 expected
 :
-if
-release_or_beta
-:
 NOTRUN
 [
 [
@@ -249,11 +252,7 @@ COEP
 ]
 expected
 :
-if
-release_or_beta
-:
 NOTRUN
-FAIL
 [
 [
 service
@@ -266,11 +265,7 @@ redirect
 ]
 expected
 :
-if
-release_or_beta
-:
 NOTRUN
-FAIL
 [
 [
 between
@@ -285,9 +280,6 @@ same
 origin
 ]
 expected
-:
-if
-release_or_beta
 :
 NOTRUN
 [
@@ -309,9 +301,6 @@ origin
 ]
 expected
 :
-if
-release_or_beta
-:
 NOTRUN
 [
 [
@@ -329,11 +318,7 @@ COEP
 ]
 expected
 :
-if
-release_or_beta
-:
 NOTRUN
-FAIL
 [
 [
 between
@@ -349,11 +334,7 @@ redirect
 ]
 expected
 :
-if
-release_or_beta
-:
 NOTRUN
-FAIL
 [
 destination
 :
@@ -361,8 +342,4 @@ script
 ]
 expected
 :
-if
-release_or_beta
-:
 NOTRUN
-FAIL
