--- a/testing/web-platform/meta/html/cross-origin-embedder-policy/reporting-navigation.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-embedder-policy/reporting-navigation.https.html.ini
@@ -7,6 +7,9 @@ https
 .
 html
 ]
+expected
+:
+TIMEOUT
 [
 parent
 :
@@ -52,7 +55,7 @@ true
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -98,7 +101,7 @@ true
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -158,7 +161,7 @@ true
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -204,7 +207,7 @@ false
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -246,7 +249,7 @@ false
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -306,7 +309,7 @@ false
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -352,7 +355,7 @@ false
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -394,7 +397,7 @@ true
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -436,7 +439,7 @@ false
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -467,7 +470,7 @@ false
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -502,7 +505,7 @@ false
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -544,7 +547,7 @@ true
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -579,7 +582,7 @@ true
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -610,7 +613,7 @@ true
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -1184,7 +1187,7 @@ false
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
@@ -1236,7 +1239,7 @@ true
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 parent
 :
