Bug 1719566 [wpt PR 29599] - Update wpt metadata, a=testonly
wpt-pr: 29599
wpt-type: metadata

UltraBlame original commit: 017c2bcbb73bb16c3d34952594abbd2693603536

--- a/testing/web-platform/meta/webcodecs/videoFrame-copyTo.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-copyTo.any.js.ini
@@ -130,6 +130,15 @@ expected
 :
 FAIL
 [
+Test
+closed
+frame
+.
+]
+expected
+:
+FAIL
+[
 videoFrame
 -
 copyTo
@@ -257,6 +266,15 @@ FAIL
 Test
 invalid
 rect
+.
+]
+expected
+:
+FAIL
+[
+Test
+closed
+frame
 .
 ]
 expected
