--- a/testing/web-platform/meta/webcodecs/videoFrame.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame.any.js.ini
@@ -220,6 +220,27 @@ expected
 :
 FAIL
 [
+Test
+closed
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+Test
+planar
+constructed
+I420
+VideoFrame
+with
+colorSpace
+]
+expected
+:
+FAIL
+[
 videoFrame
 .
 any
@@ -434,6 +455,27 @@ the
 alpha
 channel
 .
+]
+expected
+:
+FAIL
+[
+Test
+closed
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+Test
+planar
+constructed
+I420
+VideoFrame
+with
+colorSpace
 ]
 expected
 :
