Bug 1719934 [wpt PR 29630] - Update wpt metadata, a=testonly
wpt-pr: 29630
wpt-type: metadata

UltraBlame original commit: 894b083c110ae91c793a64c1beb04d7efc558b95

--- a/testing/web-platform/meta/webcodecs/videoFrame.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame.any.js.ini
@@ -230,12 +230,64 @@ expected
 FAIL
 [
 Test
+invalid
+buffer
+constructed
+VideoFrames
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+I420
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
 planar
 constructed
 I420
 VideoFrame
 with
 colorSpace
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+I420
++
+Alpha
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+NV12
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+RGB
+VideoFrames
 ]
 expected
 :
@@ -470,12 +522,64 @@ expected
 FAIL
 [
 Test
+invalid
+buffer
+constructed
+VideoFrames
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+I420
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
 planar
 constructed
 I420
 VideoFrame
 with
 colorSpace
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+I420
++
+Alpha
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+NV12
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+RGB
+VideoFrames
 ]
 expected
 :
