Bug 1719635 [wpt PR 29608] - Update wpt metadata, a=testonly
wpt-pr: 29608
wpt-type: metadata

UltraBlame original commit: 9b65a80d90872f8bf70022b57cd61a731ede21b3

--- a/testing/web-platform/meta/html/cross-origin-embedder-policy/none.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-embedder-policy/none.https.html.ini
@@ -21,12 +21,20 @@ not
 nightly_build
 :
 [
-"
 OK
-"
-"
 TIMEOUT
+]
+if
+processor
+=
+=
 "
+x86
+"
+:
+[
+OK
+TIMEOUT
 ]
 [
 "
@@ -68,10 +76,41 @@ not
 nightly_build
 :
 [
-"
 PASS
-"
-"
 TIMEOUT
+]
+[
 "
+none
+"
+top
+-
+level
+:
+navigating
+a
+frame
+back
+from
+"
+require
+-
+corp
+"
+should
+succeed
+]
+expected
+:
+if
+processor
+=
+=
+"
+x86
+"
+:
+[
+PASS
+TIMEOUT
 ]
