--- a/testing/web-platform/meta/virtual-keyboard/virtual-keyboard-type.https.html.ini
+++ b/testing/web-platform/meta/virtual-keyboard/virtual-keyboard-type.https.html.ini
@@ -5,6 +5,8 @@ keyboard
 -
 type
 .
+https
+.
 html
 ]
 [
@@ -25,6 +27,30 @@ virtualKeyboard
 has
 type
 VirtualKeyboard
+]
+expected
+:
+FAIL
+[
+navigator
+.
+virtualKeyboard
+.
+show
+instanceof
+Function
+]
+expected
+:
+FAIL
+[
+navigator
+.
+virtualKeyboard
+.
+hide
+instanceof
+Function
 ]
 expected
 :
