Bug 1720635 [wpt PR 29671] - Update wpt metadata, a=testonly
wpt-pr: 29671
wpt-type: metadata

UltraBlame original commit: 2dbc94c383f532ef2c7cd6dcd0dd46703fe3dd91

--- a/testing/web-platform/meta/css/css-overflow/parsing/scrollbar-gutter-valid.html.ini
+++ b/testing/web-platform/meta/css/css-overflow/parsing/scrollbar-gutter-valid.html.ini
@@ -109,3 +109,59 @@ value
 expected
 :
 FAIL
+[
+e
+.
+style
+[
+'
+scrollbar
+-
+gutter
+'
+\
+]
+=
+"
+stable
+both
+-
+edges
+"
+should
+set
+the
+property
+value
+]
+expected
+:
+FAIL
+[
+e
+.
+style
+[
+'
+scrollbar
+-
+gutter
+'
+\
+]
+=
+"
+both
+-
+edges
+stable
+"
+should
+set
+the
+property
+value
+]
+expected
+:
+FAIL
