--- a/testing/web-platform/meta/css/css-overflow/scrollbar-gutter-vertical-lr-001.html.ini
+++ b/testing/web-platform/meta/css/css-overflow/scrollbar-gutter-vertical-lr-001.html.ini
@@ -107,3 +107,45 @@ mirror
 expected
 :
 FAIL
+[
+overflow
+auto
+scrollbar
+-
+gutter
+stable
+both
+-
+edges
+]
+expected
+:
+FAIL
+[
+overflow
+scroll
+scrollbar
+-
+gutter
+stable
+both
+-
+edges
+]
+expected
+:
+FAIL
+[
+overflow
+hidden
+scrollbar
+-
+gutter
+stable
+both
+-
+edges
+]
+expected
+:
+FAIL
