--- a/testing/web-platform/meta/delegated-ink/requestPresenter-returns-valid-promise.tentative.window.js.ini
+++ b/testing/web-platform/meta/delegated-ink/requestPresenter-returns-valid-promise.tentative.window.js.ini
@@ -54,3 +54,65 @@ type
 expected
 :
 FAIL
+[
+Receive
+rejected
+promise
+for
+an
+invalid
+param
+.
+]
+expected
+:
+FAIL
+[
+Received
+fulfilled
+promise
+for
+no
+param
+]
+expected
+:
+FAIL
+[
+Received
+fulfilled
+promise
+for
+null
+param
+]
+expected
+:
+FAIL
+[
+Received
+fulfilled
+promise
+for
+empty
+dictionary
+param
+]
+expected
+:
+FAIL
+[
+Received
+fulfilled
+promise
+for
+dictionary
+param
+with
+valid
+element
+.
+]
+expected
+:
+FAIL
