Bug 1720624 - Remove WrSpaceAndClip type r=nical
This was used when defining scroll layers and also backdrop-filter.

Removing it from the scroll layer API allows removal of the implicit
clip rect that a scroll node previously created (Gecko doesn't use
this). To maintain compatibility with wrench tests, add a flag that
allows a test to specify a clip rect should be created for the scroll
layer (we should remove this from wrench in future and port the tests
to create explicit clip rects as required).

The usage of backdrop-filter was the only remaining place this type
was used, so it's now ported to use the clip-chain API.

This simplifies the scroll layer API and removes an extra clip rect
from each scroll layer instance, as a small performance improvement.

Differential Revision: https://phabricator.services.mozilla.com/D119938

UltraBlame original commit: b181b8a09ecb720839b187341cb0e5b1420f84b5

--- a/gfx/wr/wrench/reftests/scrolling/simple.yaml
+++ b/gfx/wr/wrench/reftests/scrolling/simple.yaml
@@ -24,6 +24,13 @@ size
 100
 100
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -63,6 +70,13 @@ size
 100
 100
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
