--- a/gfx/wr/wrench/reftests/scrolling/sticky-applied.yaml
+++ b/gfx/wr/wrench/reftests/scrolling/sticky-applied.yaml
@@ -101,6 +101,13 @@ offset
 0
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -220,6 +227,13 @@ offset
 0
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -347,6 +361,13 @@ offset
 0
 40
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -477,6 +498,13 @@ offset
 -
 10
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -595,6 +623,13 @@ offset
 -
 10
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -696,6 +731,13 @@ offset
 -
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -785,6 +827,13 @@ offset
 -
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -874,6 +923,13 @@ offset
 -
 40
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -962,6 +1018,13 @@ offset
 0
 10
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1050,6 +1113,13 @@ offset
 0
 10
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1148,6 +1218,13 @@ offset
 50
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1238,6 +1315,13 @@ offset
 50
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1328,6 +1412,13 @@ offset
 40
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1419,6 +1510,13 @@ offset
 10
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1510,6 +1608,13 @@ offset
 10
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1611,6 +1716,13 @@ offset
 50
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1700,6 +1812,13 @@ offset
 50
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1789,6 +1908,13 @@ offset
 40
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1877,6 +2003,13 @@ offset
 10
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1965,6 +2098,13 @@ offset
 10
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
