--- a/gfx/wr/wrench/reftests/scrolling/sticky-nested.yaml
+++ b/gfx/wr/wrench/reftests/scrolling/sticky-nested.yaml
@@ -54,6 +54,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -169,6 +176,13 @@ offset
 0
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -275,6 +289,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -390,6 +411,13 @@ offset
 50
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -493,6 +521,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -608,6 +643,13 @@ offset
 0
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -714,6 +756,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -829,6 +878,13 @@ offset
 50
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -932,6 +988,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1047,6 +1110,13 @@ offset
 0
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1153,6 +1223,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1268,6 +1345,13 @@ offset
 50
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
