--- a/gfx/wr/wrench/reftests/scrolling/sticky.yaml
+++ b/gfx/wr/wrench/reftests/scrolling/sticky.yaml
@@ -54,6 +54,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -147,6 +154,13 @@ offset
 0
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -231,6 +245,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -324,6 +345,13 @@ offset
 50
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -405,6 +433,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -498,6 +533,13 @@ offset
 0
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -582,6 +624,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -675,6 +724,13 @@ offset
 50
 0
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -756,6 +812,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -849,6 +912,13 @@ offset
 0
 50
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -933,6 +1003,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 items
 :
 -
@@ -1018,6 +1095,13 @@ size
 200
 200
 ]
+clip
+-
+to
+-
+frame
+:
+true
 scroll
 -
 offset
