Bug 1716024 p1: Change CET support to compatible modules only. r=handyman
Differential Revision: https://phabricator.services.mozilla.com/D117550

UltraBlame original commit: 4c5225386044d1a351bcb55949b9ae44ecd71933

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -64389,16 +64389,20 @@ always
 #
 Whether
 CET
+User
 Shadow
-Stacks
-Strict
-mode
+Stack
+compatible
+modules
+only
 is
 enabled
 for
 the
-content
-processes
+#
+relevant
+process
+type
 .
 -
 name
@@ -64411,9 +64415,9 @@ content
 .
 shadow
 -
-stacks
--
-strict
+stack
+.
+enabled
 type
 :
 RelaxedAtomicBool
@@ -64423,20 +64427,6 @@ false
 mirror
 :
 always
-#
-Whether
-CET
-Shadow
-Stacks
-Strict
-mode
-is
-enabled
-for
-the
-RDD
-processes
-.
 -
 name
 :
@@ -64448,9 +64438,9 @@ rdd
 .
 shadow
 -
-stacks
--
-strict
+stack
+.
+enabled
 type
 :
 RelaxedAtomicBool
@@ -64460,20 +64450,6 @@ false
 mirror
 :
 always
-#
-Whether
-CET
-Shadow
-Stacks
-Strict
-mode
-is
-enabled
-for
-the
-socket
-processes
-.
 -
 name
 :
@@ -64485,9 +64461,9 @@ socket
 .
 shadow
 -
-stacks
--
-strict
+stack
+.
+enabled
 type
 :
 RelaxedAtomicBool
@@ -64497,20 +64473,6 @@ false
 mirror
 :
 always
-#
-Whether
-CET
-Shadow
-Stacks
-Strict
-mode
-is
-enabled
-for
-the
-GPU
-processes
-.
 -
 name
 :
@@ -64522,9 +64484,9 @@ gpu
 .
 shadow
 -
-stacks
--
-strict
+stack
+.
+enabled
 type
 :
 RelaxedAtomicBool
@@ -64534,20 +64496,6 @@ false
 mirror
 :
 always
-#
-Whether
-CET
-Shadow
-Stacks
-Strict
-mode
-is
-enabled
-for
-the
-GMP
-processes
-.
 -
 name
 :
@@ -64559,9 +64507,9 @@ gmp
 .
 shadow
 -
-stacks
--
-strict
+stack
+.
+enabled
 type
 :
 RelaxedAtomicBool
