Bug 1720292 - replace jianshu with sina r=perftest-reviewers,AlexandruIonescu
Differential Revision: https://phabricator.services.mozilla.com/D119762

UltraBlame original commit: 3b1f9f3413f4723951562044ad69bddb3b992418

--- a/testing/raptor/raptor/perfdocs/config.yml
+++ b/testing/raptor/raptor/perfdocs/config.yml
@@ -683,17 +683,6 @@ CH
 -
 M
 "
-jianshu
-:
-"
-BT
-GV
-FE
-RB
-CH
--
-M
-"
 microsoft
 -
 support
@@ -719,6 +708,17 @@ CH
 M
 "
 stackoverflow
+:
+"
+BT
+GV
+FE
+RB
+CH
+-
+M
+"
+sina
 :
 "
 BT
