--- a/testing/raptor/raptor/tests/tp6/mobile/browsertime-tp6m.ini
+++ b/testing/raptor/raptor/tests/tp6/mobile/browsertime-tp6m.ini
@@ -732,47 +732,6 @@ login
 =
 true
 [
-jianshu
-]
-test_url
-=
-https
-:
-/
-/
-www
-.
-jianshu
-.
-com
-/
-playback_pageset_manifest
-=
-mitm4
--
-pixel2
--
-fennec
--
-{
-subtest
-}
-.
-manifest
-playback_recordings
-=
-mitm4
--
-pixel2
--
-fennec
--
-{
-subtest
-}
-.
-mp
-[
 microsoft
 -
 support
@@ -806,6 +765,23 @@ www
 reddit
 .
 com
+[
+sina
+]
+test_url
+=
+https
+:
+/
+/
+www
+.
+sina
+.
+com
+.
+cn
+/
 [
 stackoverflow
 ]
