Bug 1720301 - replace bbc  with dailymail r=perftest-reviewers,AlexandruIonescu
Differential Revision: https://phabricator.services.mozilla.com/D119766

UltraBlame original commit: 86d0c64032caf572fe88a4970a9db7d1fac098c5

--- a/taskcluster/ci/test/browsertime-mobile.yml
+++ b/taskcluster/ci/test/browsertime-mobile.yml
@@ -555,8 +555,6 @@ subtests
 -
 amazon
 -
-bbc
--
 bing
 -
 [
@@ -584,6 +582,8 @@ cnn
 -
 amp
 ]
+-
+dailymail
 -
 [
 ebay
@@ -1495,8 +1495,6 @@ amazon
 s
 ]
 -
-bbc
--
 bing
 -
 [
@@ -1528,6 +1526,8 @@ cnn
 -
 amp
 ]
+-
+dailymail
 -
 discord
 -
