--- a/testing/raptor/raptor/perfdocs/config.yml
+++ b/testing/raptor/raptor/perfdocs/config.yml
@@ -487,17 +487,6 @@ CH
 -
 M
 "
-bbc
-:
-"
-BT
-GV
-FE
-RB
-CH
--
-M
-"
 bing
 :
 "
@@ -549,6 +538,17 @@ M
 cnn
 -
 ampstories
+:
+"
+BT
+GV
+FE
+RB
+CH
+-
+M
+"
+dailymail
 :
 "
 BT
