--- a/testing/raptor/raptor/tests/tp6/mobile/browsertime-tp6m.ini
+++ b/testing/raptor/raptor/tests/tp6/mobile/browsertime-tp6m.ini
@@ -223,52 +223,6 @@ mobile
 +
 phone
 [
-bbc
-]
-test_url
-=
-https
-:
-/
-/
-www
-.
-bbc
-.
-com
-/
-news
-/
-business
--
-47245877
-playback_pageset_manifest
-=
-mitm4
--
-pixel2
--
-fennec
--
-{
-subtest
-}
-.
-manifest
-playback_recordings
-=
-mitm4
--
-pixel2
--
-fennec
--
-{
-subtest
-}
-.
-mp
-[
 bing
 ]
 test_url
@@ -378,6 +332,50 @@ unlike
 any
 -
 other
+[
+dailymail
+]
+test_url
+=
+https
+:
+/
+/
+www
+.
+dailymail
+.
+co
+.
+uk
+/
+sciencetech
+/
+article
+-
+9749081
+/
+Experts
+-
+say
+-
+Hubble
+-
+repair
+-
+despite
+-
+NASA
+-
+insisting
+-
+multiple
+-
+options
+-
+fix
+.
+html
 [
 ebay
 -
