Bug 1675107 - disable browser_protectionsUI.js for frequent failures. r=intermittent-reviewers,ahal DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D120202

UltraBlame original commit: a4c93e238391cc8314779eae8ffcc0af0192be43

--- a/browser/base/content/test/protectionsUI/browser.ini
+++ b/browser/base/content/test/protectionsUI/browser.ini
@@ -40,6 +40,26 @@ browser_protectionsUI
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+linux
+'
+&
+&
+!
+debug
+&
+&
+tsan
+#
+Bug
+1675107
 [
 browser_protectionsUI_3
 .
