Backed out changeset f0914306ef83 (bug 1721190) for geckoview failures on profileLocked. CLOSED TREE
UltraBlame original commit: 0f034b1ab8ec9daf6bc52094fadc167da9f7e935

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -31162,9 +31162,22 @@ software
 type
 :
 bool
+#
+if
+defined
+(
+MOZ_WIDGET_ANDROID
+)
+value
+:
+false
+#
+else
 value
 :
 true
+#
+endif
 mirror
 :
 once
