--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -31131,9 +31131,22 @@ basic
 type
 :
 bool
+#
+if
+defined
+(
+MOZ_WIDGET_ANDROID
+)
 value
 :
-false
+true
+#
+else
+value
+:
+IS_NOT_EARLY_BETA_OR_EARLIER
+#
+endif
 mirror
 :
 once
