Bug 1695395 - Disable browser_doorhanger_submit_telemetry.js on linux asan for frequent failures. r=intermittent-reviewers,ahal
Differential Revision: https://phabricator.services.mozilla.com/D120133

UltraBlame original commit: 3d2cca194383074e04689b5b0a33bf387e27ea4b

--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -529,7 +529,12 @@ linux
 "
 &
 &
+(
 debug
+|
+|
+asan
+)
 #
 Bug
 1658056
@@ -537,6 +542,9 @@ tsan
 :
 bug
 1661305
+asan
+:
+1695395
 [
 browser_doorhanger_target_blank
 .
