Bug 1648944 - Part 1: Split select event flags into each event name r=masayuki
Differential Revision: https://phabricator.services.mozilla.com/D86700

UltraBlame original commit: 3f41877ffd14fefbfc03cbf7224492ad42d591ed

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -18705,6 +18705,29 @@ select_events
 .
 textcontrols
 .
+selectionchange
+.
+enabled
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+-
+name
+:
+dom
+.
+select_events
+.
+textcontrols
+.
+selectstart
+.
 enabled
 type
 :
