--- a/browser/extensions/screenshots/manifest.json
+++ b/browser/extensions/screenshots/manifest.json
@@ -254,6 +254,69 @@ blank
 .
 html
 "
+"
+icons
+/
+cancel
+.
+svg
+"
+"
+icons
+/
+download
+.
+svg
+"
+"
+icons
+/
+copy
+.
+svg
+"
+"
+icons
+/
+icon
+-
+256
+.
+png
+"
+"
+icons
+/
+menu
+-
+fullpage
+.
+svg
+"
+"
+icons
+/
+menu
+-
+visible
+.
+svg
+"
+"
+icons
+/
+icon
+-
+welcome
+-
+face
+-
+without
+-
+eyes
+.
+svg
+"
 ]
 "
 permissions
