Bug 1705141 - Implement imperative slotting API r=smaug,emilio
Differential Revision: https://phabricator.services.mozilla.com/D119444

UltraBlame original commit: 0a87a26cc1b1f2d32cbbee74147a8273f93eb564

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -22102,6 +22102,39 @@ mirror
 :
 always
 #
+Is
+the
+'
+assign
+'
+API
+for
+slot
+element
+enabled
+?
+-
+name
+:
+dom
+.
+shadowdom
+.
+slot
+.
+assign
+.
+enabled
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
 NOTE
 :
 This
