Bug 1720805 [wpt PR 29682] - Update wpt metadata, a=testonly
wpt-pr: 29682
wpt-type: metadata

UltraBlame original commit: 833aece515bedd02aff9900f3e97ba20df5c04b2

--- a/testing/web-platform/meta/shadow-dom/declarative/declarative-shadow-dom-basic.tentative.html.ini
+++ b/testing/web-platform/meta/shadow-dom/declarative/declarative-shadow-dom-basic.tentative.html.ini
@@ -137,3 +137,38 @@ root
 expected
 :
 FAIL
+[
+Declarative
+Shadow
+DOM
+:
+template
+containing
+(
+deeply
+nested
+)
+declarative
+shadow
+root
+]
+expected
+:
+FAIL
+[
+Declarative
+Shadow
+DOM
+:
+template
+containing
+a
+template
+containing
+declarative
+shadow
+root
+]
+expected
+:
+FAIL
