Bug 1719853 [wpt PR 29618] - Improve tests for extra arguments to getContext()., a=testonly
Automatic update from web-platform-tests
Improve tests for extra arguments to getContext(). (#29618)

--

wpt-commits: 7f5aaca5709faad3f7cb40f79000028ddded078a
wpt-pr: 29618

UltraBlame original commit: c6bb9eabe78f4e8c9f4f9078ad727b9e7e8cf494

--- a/testing/web-platform/tests/html/canvas/tools/spec.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/spec.yaml
@@ -554,43 +554,17 @@ extraargs
 text
 :
 "
-When
-the
-getContext
-(
-)
-method
-of
-a
-canvas
-element
+If
+options
 is
+not
+an
+object
+then
+set
+options
 to
-return
-a
-new
-object
-for
-the
-contextId
-2d
-the
-user
-agent
-*
-must
-*
-return
-a
-new
-CanvasRenderingContext2D
-object
-.
-Any
-additional
-arguments
-are
-ignored
+null
 .
 "
 -
