--- a/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/the-offscreen-canvas.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/the-offscreen-canvas.yaml
@@ -169,15 +169,25 @@ name
 getcontext
 .
 extraargs
+.
+create
 desc
 :
 The
 2D
 context
-ignores
+doesn
+'
+t
+throw
+with
 extra
 getContext
 arguments
+(
+new
+context
+)
 testing
 :
 -
@@ -189,18 +199,15 @@ extraargs
 code
 :
 |
-var
-offscreenCanvas2
-=
+assert
+(
 new
 OffscreenCanvas
 (
 100
 50
 )
-;
-assert
-offscreenCanvas2
+)
 .
 getContext
 (
@@ -223,7 +230,14 @@ false
 null
 ;
 assert
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -238,7 +252,14 @@ getContext
 null
 ;
 assert
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -255,7 +276,14 @@ test
 null
 ;
 assert
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -270,7 +298,14 @@ undefined
 null
 ;
 assert
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -285,7 +320,159 @@ null
 null
 ;
 assert
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
+.
+getContext
+(
+'
+2d
+'
+Symbol
+.
+hasInstance
+)
+!
+=
+=
+null
+;
+t
+.
+done
+(
+)
+;
+-
+name
+:
+2d
+.
+getcontext
+.
+extraargs
+.
+cache
+desc
+:
+The
+2D
+context
+doesn
+'
+t
+throw
+with
+extra
+getContext
+arguments
+(
+cached
+)
+testing
+:
+-
+context
+.
+2d
+.
+extraargs
+code
+:
+|
+assert
+offscreenCanvas
+.
+getContext
+(
+'
+2d
+'
+false
+{
+}
+[
+]
+1
+"
+2
+"
+)
+!
+=
+=
+null
+;
+assert
+offscreenCanvas
+.
+getContext
+(
+'
+2d
+'
+123
+)
+!
+=
+=
+null
+;
+assert
+offscreenCanvas
+.
+getContext
+(
+'
+2d
+'
+"
+test
+"
+)
+!
+=
+=
+null
+;
+assert
+offscreenCanvas
+.
+getContext
+(
+'
+2d
+'
+undefined
+)
+!
+=
+=
+null
+;
+assert
+offscreenCanvas
+.
+getContext
+(
+'
+2d
+'
+null
+)
+!
+=
+=
+null
+;
+assert
+offscreenCanvas
 .
 getContext
 (
