Bug 1719853 [wpt PR 29618] - Update wpt metadata, a=testonly
wpt-pr: 29618
wpt-type: metadata

UltraBlame original commit: 4f379de483aaa0721a9cd07e343b8a7eb29f4b54

--- a/testing/web-platform/meta/html/semantics/embedded-content/the-canvas-element/2d-getcontext-options.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-canvas-element/2d-getcontext-options.html.ini
@@ -1,20 +1,22 @@
 [
 2d
-.
+-
 getcontext
-.
-extraargs
+-
+options
 .
 html
 ]
 [
-The
-2D
-context
-ignores
-extra
+Options
+conversion
+for
 getContext
-arguments
+(
+"
+2d
+"
+)
 ]
 expected
 :
