--- a/testing/web-platform/tests/html/canvas/tools/yaml/element/path-objects.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/element/path-objects.yaml
@@ -14058,6 +14058,238 @@ NaN
 ;
 ctx
 .
+roundRect
+(
+0
+0
+100
+100
+[
+new
+DOMPoint
+(
+10
+Infinity
+)
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+new
+DOMPoint
+(
+10
+-
+Infinity
+)
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+new
+DOMPoint
+(
+10
+NaN
+)
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+new
+DOMPoint
+(
+Infinity
+10
+)
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+new
+DOMPoint
+(
+-
+Infinity
+10
+)
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+new
+DOMPoint
+(
+NaN
+10
+)
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+{
+x
+:
+10
+y
+:
+Infinity
+}
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+{
+x
+:
+10
+y
+:
+-
+Infinity
+}
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+{
+x
+:
+10
+y
+:
+NaN
+}
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+{
+x
+:
+Infinity
+y
+:
+10
+}
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+{
+x
+:
+-
+Infinity
+y
+:
+10
+}
+]
+)
+;
+ctx
+.
+roundRect
+(
+0
+0
+100
+100
+[
+{
+x
+:
+NaN
+y
+:
+10
+}
+]
+)
+;
+ctx
+.
 lineTo
 (
 100
@@ -20323,6 +20555,128 @@ roundRect
 1
 -
 1
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+new
+DOMPoint
+(
+-
+1
+1
+)
+1
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+new
+DOMPoint
+(
+1
+-
+1
+)
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+{
+x
+:
+-
+1
+y
+:
+1
+}
+1
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+{
+x
+:
+1
+y
+:
+-
+1
+}
 ]
 )
 }
