Bug 1709640 - Add GeckoView Lite build variant. r=jmaher,aklotz,mhentges,glandium
This patch adds a new GeckoView build variant dubbed "lite". We are in the
process of adding some optional dependencies to GeckoView that are needed by
Fenix (like Glean and Nimbus) which are likely not going to be used by anyone
else at Mozilla. To avoid bloating third party consumers, we provide a
geckoview-lite build that doesn't contain any optional dependency.

The min SDK version of GeckoView (non-lite) is being increased to 21 to match
Glean's min SDK. Given that Fenix's min SDK version is already 21 and that the
lite version's min SDK is still at 16 this change is safe to do and will not
incur in any loss of usability.

Differential Revision: https://phabricator.services.mozilla.com/D114370

UltraBlame original commit: f918535301cbb21e9dfa4ef26eb7e88e632c00d2

--- a/taskcluster/ci/build-fat-aar/kind.yml
+++ b/taskcluster/ci/build-fat-aar/kind.yml
@@ -436,15 +436,6 @@ tooltool
 downloads
 :
 internal
-custom
--
-build
--
-variant
--
-cfg
-:
-arm
 #
 Note
 :
@@ -525,12 +516,6 @@ fetches
 :
 toolchain
 :
--
-android
--
-gradle
--
-dependencies
 -
 android
 -
@@ -668,7 +653,7 @@ platform
 :
 android
 -
-4
+5
 -
 0
 -
@@ -786,6 +771,281 @@ py
 taskcluster_nightly
 .
 py
+custom
+-
+build
+-
+variant
+-
+cfg
+:
+arm
+fetches
+:
+toolchain
+:
+-
+android
+-
+gradle
+-
+dependencies
+optimization
+:
+skip
+-
+unless
+-
+backstop
+:
+null
+android
+-
+geckoview
+-
+fat
+-
+aar
+-
+shippable
+-
+lite
+/
+opt
+:
+description
+:
+"
+Android
+GeckoView
+Lite
+multi
+-
+architecture
+fat
+AAR
+Shippable
+"
+attributes
+:
+shippable
+:
+true
+enable
+-
+full
+-
+crashsymbols
+:
+true
+disable
+-
+push
+-
+apk
+:
+true
+shipping
+-
+phase
+:
+build
+shipping
+-
+product
+:
+fennec
+index
+:
+job
+-
+name
+:
+android
+-
+geckoview
+-
+fat
+-
+aar
+-
+opt
+-
+lite
+type
+:
+shippable
+-
+with
+-
+multi
+-
+l10n
+treeherder
+:
+platform
+:
+android
+-
+4
+-
+1
+-
+geckoview
+-
+fat
+-
+aar
+-
+shippable
+/
+opt
+symbol
+:
+Bgvl
+dependencies
+:
+android
+-
+x86
+-
+shippable
+-
+lite
+:
+build
+-
+android
+-
+x86
+-
+shippable
+-
+lite
+/
+opt
+android
+-
+x86_64
+-
+shippable
+-
+lite
+:
+build
+-
+android
+-
+x86_64
+-
+shippable
+-
+lite
+/
+opt
+android
+-
+arm
+-
+shippable
+-
+lite
+:
+build
+-
+android
+-
+arm
+-
+shippable
+-
+lite
+/
+opt
+android
+-
+aarch64
+-
+shippable
+-
+lite
+:
+build
+-
+android
+-
+aarch64
+-
+shippable
+-
+lite
+/
+opt
+worker
+:
+env
+:
+PERFHERDER_EXTRA_OPTIONS
+:
+android
+-
+geckoview
+-
+fat
+-
+aar
+-
+nightly
+-
+lite
+run
+:
+actions
+:
+[
+get
+-
+secrets
+build
+multi
+-
+l10n
+]
+config
+:
+-
+builds
+/
+releng_base_android_64_builds
+.
+py
+-
+taskcluster_nightly
+.
+py
+custom
+-
+build
+-
+variant
+-
+cfg
+:
+arm
+-
+lite
+fetches
+:
+toolchain
+:
+-
+android
+-
+gradle
+-
+dependencies
+-
+lite
 optimization
 :
 skip
