--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -18870,6 +18870,75 @@ true
 mirror
 :
 always
+#
+Additional
+ServiceWorker
+navigation
+mitigation
+control
+to
+unregister
+the
+#
+ServiceWorker
+after
+multiple
+faults
+are
+encountered
+.
+The
+mitigation
+is
+#
+disabled
+when
+this
+is
+set
+to
+zero
+otherwise
+this
+is
+the
+number
+of
+faults
+that
+#
+need
+to
+occur
+for
+a
+specific
+ServiceWorker
+before
+it
+will
+be
+unregistered
+.
+-
+name
+:
+dom
+.
+serviceWorkers
+.
+mitigations
+.
+navigation_fault_threshold
+type
+:
+uint32_t
+value
+:
+3
+mirror
+:
+always
 -
 name
 :
