--- a/taskcluster/ci/toolchain/misc.yml
+++ b/taskcluster/ci/toolchain/misc.yml
@@ -254,6 +254,138 @@ gcc
 linux64
 -
 binutils
+-
+2
+.
+31
+.
+1
+:
+description
+:
+"
+Binutils
+toolchain
+build
+"
+treeherder
+:
+symbol
+:
+TL
+(
+binutil2
+.
+31
+)
+run
+:
+script
+:
+build
+-
+binutils
+-
+linux
+.
+sh
+resources
+:
+-
+'
+build
+/
+unix
+/
+build
+-
+binutils
+/
+build
+-
+binutils
+.
+sh
+'
+toolchain
+-
+artifact
+:
+public
+/
+build
+/
+binutils
+.
+tar
+.
+xz
+fetches
+:
+fetch
+:
+-
+binutils
+-
+2
+.
+31
+.
+1
+toolchain
+:
+#
+Work
+around
+https
+:
+/
+/
+bugs
+.
+debian
+.
+org
+/
+786883
+by
+using
+toolchain
+#
+gcc
+.
+We
+can
+remove
+this
+workaround
+when
+we
+upgrade
+the
+toolchain
+#
+docker
+image
+to
+Debian
+bullseye
+.
+-
+linux64
+-
+gcc
+-
+7
+-
+linux64
+-
+toolchain
+-
+sysroot
+linux64
+-
+binutils
 :
 description
 :
@@ -321,7 +453,7 @@ binutils
 -
 2
 .
-31
+36
 .
 1
 toolchain
