--- a/editor/spellchecker/tests/mochitest.ini
+++ b/editor/spellchecker/tests/mochitest.ini
@@ -88,19 +88,36 @@ DE
 de_DE
 .
 aff
-!
-/
-editor
-/
-libeditor
-/
-tests
-/
 spellcheck
 .
 js
 [
 test_async_UpdateCurrentDictionary
+.
+html
+]
+[
+test_bug366682
+.
+html
+]
+[
+test_bug432225
+.
+html
+]
+[
+test_bug484181
+.
+html
+]
+[
+test_bug596333
+.
+html
+]
+[
+test_bug636465
 .
 html
 ]
@@ -116,6 +133,16 @@ html
 ]
 [
 test_bug717433
+.
+html
+]
+[
+test_bug1100966
+.
+html
+]
+[
+test_bug1154791
 .
 html
 ]
@@ -155,7 +182,17 @@ test_bug1365383
 html
 ]
 [
+test_bug1368544
+.
+html
+]
+[
 test_bug1418629
+.
+html
+]
+[
+test_bug1497480
 .
 html
 ]
