Bug 1713784 - [remote] Implement basic support for session.new command. r=webdriver-reviewers,jdescottes,jgraham
Differential Revision: https://phabricator.services.mozilla.com/D119731

UltraBlame original commit: 2fd613c3d66e7d00eedd1d08f4effdea46f2aa0a

--- a/remote/webdriver-bidi/test/xpcshell/xpcshell.ini
+++ b/remote/webdriver-bidi/test/xpcshell/xpcshell.ini
@@ -54,27 +54,7 @@ MPL
 /
 .
 [
-test_CDPConnection
-.
-js
-]
-[
-test_DomainCache
-.
-js
-]
-[
-test_Error
-.
-js
-]
-[
-test_Session
-.
-js
-]
-[
-test_StreamRegistry
+test_WebDriverBiDiConnection
 .
 js
 ]
