Bug 1551886: Check the parent scheme for NullPrincipals via the precusor principal. r=ckerschb
Differential Revision: https://phabricator.services.mozilla.com/D119977

UltraBlame original commit: ec131014f7fda0a016a8b0ea085e9c4edaff9b8e

--- a/dom/security/test/mixedcontentblocker/mochitest.ini
+++ b/dom/security/test/mixedcontentblocker/mochitest.ini
@@ -83,6 +83,9 @@ html
 file_redirect_handler
 .
 sjs
+file_bug1551886
+.
+html
 [
 test_main
 .
@@ -193,6 +196,11 @@ Bug
 1424752
 [
 test_redirect
+.
+html
+]
+[
+test_bug1551886
 .
 html
 ]
